--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,9 @@ android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
 
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
     defaultConfig {
         applicationId "edu.nntu.gerforecast"
         minSdkVersion 15
@@ -22,4 +25,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.1.0'
 }
